@@ -4,6 +4,7 @@
 
 . /usr/share/acpi-support/policy-funcs
 
+
 # If powersaved is running, let it process the acpi event
 if pidof powersaved; then
 	exit 0
@@ -13,6 +14,18 @@ if [ `CheckPolicy` = 0 ] ; then
 	exit 0
 fi
 
-[ -e /etc/acpi/actions/suspend.sh ] || exit 0
+[ -e /etc/default/eeepc-acpi-scripts ] || exit 0
+. /etc/default/eeepc-acpi-scripts
 
-. /etc/acpi/actions/suspend.sh
+case "$LID_CLOSE_ACTION" in
+    nothing)
+	exit 0
+    ;;
+    suspend|"")
+	[ -e /etc/acpi/actions/suspend.sh ] || exit 0
+	. /etc/acpi/actions/suspend.sh
+    ;;
+    *)
+	$LID_CLOSE_ACTION
+    ;;
+esac
